# ConditionalGMM

./: .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
ConditionalGMM/: MNorm.py  UnivariateGMM.py  __init__.py  cMVN.py  condGMM.py
notebooks/: Conditional PDFs of a GMM.ipynb  README.md
src/ConditionalGMM/: MNorm.py  UnivariateGMM.py  __init__.py  condGMM.py
tests/: test_UGMM.py  test_cGMM.py  test_cMVN.py
