[project]
name = "ConditionalGMM"
version = "0.1.1"
authors = [
  { name="Thomas McClintock", email="thmsmcclintock@gmail.com" },
]
description = "Functions for computing conditional distributions of Gaussian mixture models."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
  "numpy",
  "scipy",
]

[project.optional-dependencies]
test = [
  "pytest",
  "coverage[toml]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/tmcclintock/ConditionalGMM"
Issues = "https://github.com/tmcclintock/ConditionalGMM/issues"

[tool.coverage.run]
include = ["./src/ConditionalGMM/*"]
omit = [
  "*tests*",
  "*__init__*"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "@tf.function"
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
